Logs added to findAllTracksAssociatedWithArtistByID